# robotframework-realtimeresults

./: .gitignore  LICENSE  README.md  architecture.md  cli.py  config.json  docker-compose.yml  eventlog.db  kill_backend.py  log.html  nginx.conf  output.xml  pyproject.toml  report.html  requirements.txt
.github/workflows/: allow-specific-branches-to-main.yml  only-develop-to-main.yml  pr-unittests.yml  pypi-release.yml  set-version-from-branch.yml
api/: main.py  run_service.py
api/dashboard/: main.py
api/dashboard/content/: index.html  menu.js
api/ingest/: app_factory.py  main.py  routes.py
api/ingest/sinks/: db_base.py  postgres_async.py  sqlite_async.py
api/readers/: sqlite_event_reader.py
api/viewer/: Dockerfile  app_factory.py  event_manager.py  main.py  routes.py
api/viewer/readers/: base_reader.py  postgres_reader.py  sqlite_reader.py
backend/: config.json  main.py
backend/helpers/: config_loader.py
backend/readers/: event_reader.py  memory_reader.py  memory_sink.py  sqlite_reader.py
backend/sinks/: memory_sqlite.py
backend/static/: index.html
dashboard/: index.html  menu.css  menu.html  test.html
examples/: example.robot
helpers/: config_loader.py  logger.py  sql_definitions.py
producers/listener/: listener.py
producers/log_producer/: config.py  log_tail.py  log_tails.py
producers/metrics/: metric_scraper.py
realtimelogger/: listener.py
realtimelogger/sinks/: base.py  http.py  loki.py  memory.py  sqlite.py
realtimeresults/: cli.py  listener.py
realtimeresults/sinks/: base.py  http.py  sqlite.py
shared/helpers/: cli.py  config_loader.py  ensure_db_schema.py  log_line_parser.py  setup_wizard.py  sql_definitions.py
shared/middleware/: tenant_middleware.py
shared/sinks/: base.py  http.py  memory_sqlite.py  postgres.py  postgres_async.py  sqlite.py  sqlite_async.py
tests/: example.robot  test_log_line_parser.py
tests/api/: test_ingest_api.py  test_viewer_api.py
tests/producers/: test_listener.py
tests/shared/: test_cli.py  test_config_loader.py  test_kill_backend.py  test_log_line_parser.py  test_logger.py
(+3 files in other folders)
