[tool.poetry]
name = "realtimeresults"
version = "0.1.0"
description = "Realtime Robot Framework listener with FastAPI backend and Loki integration."
authors = ["Jurgen Alebregtse j.alebregtse@proton.me"]
license = "MIT"
packages = [
    { include = "realtimeresults" },
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.2.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
